# Advanced-Missile-Guidance

./: .gitattributes  README.md  cpp_visualise_fatplotlib.py  fastplotlib_dem_viewer.py  main.py  plotly_dem_viewer.py  pyvista_dem_viewer.py  tempCodeRunnerFile.py  test_pathfinding.py  vispy_test.py  visualise.py  visualise_3d.py  visualise_fastplotlib.py
data/dem/: merged_dem_sib_N54_N59_E090_E100.tif  srtm_43_02.tif
src/guidance/: archived_pathfinding.py  heuristic.py  path_smooth.py  pathfinding.py  pathfinding_backend.py
src/guidance/cpp/: CMakeLists.txt  pathfinder.cpp
src/missile/: profile.py  state.py
src/navigation/: gps.py  ins.py  kalman_filter.py  tercom.py
src/terrain/: .gitattributes  coordinates.py  database.py  dem_loader.py  merge_tiles.py  tempCodeRunnerFile.py  test.py
src/visualization/: plotter.py
tests/: ai_test_pathfinding.py  test_archived_pathfinding.py  test_get_path.py
